<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnRock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onRock"
            android:text="@string/rck" />

        <Button
            android:id="@+id/btnPaper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onPaper"
            android:text="@string/ppr" />

        <Button
            android:id="@+id/btnScissors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onScissors"
            android:text="@string/scr" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scrr"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#D62E6C" />

    <Button
        android:id="@+id/btnEnd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onGameEnd"
        android:text="@string/end" />
</LinearLayout>